--- a/Index.html
+++ b/Index.html
@@ -31,10 +31,14 @@
   </ul>
   <!-- Barra de navegação -->
   <div class="pagina1">
-    <p class="textop1">Aqui estarei resgistrando tudo o que julgar nescessario sobre meu aprendizado de HTML5, CSS3, JS
+    <div class="textop1">
+      <p>
+        Aqui estarei resgistrando tudo o que julgar nescessario sobre meu aprendizado de HTML5, CSS3, JS
       e
       afins alem dos
-      meus projetos.</p>
+      meus projetos.
+    </p>
+  </div>
     <img src="img/capa.jpg" class="capa">
   </div>
   <script src="index.js"></script>
